[package]
name = "qanata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = [ "derive" ] }
log = "0.4.8"
simplelog = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
